<?xml version="1.0"?>
<package format="2">.
  <name>chassis_msgs</name>
  <version>0.0.1</version>
  <description>Chassis CAN related message types.</description>

  <maintainer email="pzzlr@snu.ac.kr">Hyunsung Lee</maintainer>
  <author email="pzzlr@snu.ac.kr">Hyunsung Lee</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
