<?xml version="1.0"?>
<package format="2">.
  <name>lidar_processing_msgs</name>
  <version>0.0.1</version>
  <description>Lidar Processing related message types.</description>

  <maintainer email="psy0430@snu.ac.kr">Sungyoul Park</maintainer>
  <author email="psy0430@snu.ac.kr">Sungyoul Park</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
