<?xml version="1.0"?>
<package format="2">
  <name>vdcl_fusion_perception</name>
  <version>0.0.1</version>
  <description>Message definitions for detection objects in VDCL fusion perception.</description>

  <maintainer email="chloe@todo.todo">chloe</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
